# CMakeDemo

./: CMakeLists.txt  Interpolation.cpp  Interpolation.h  Main.cpp  macros.cmake
.github/workflows/: build.yml
Choreograph/: CMakeLists.txt
cmake/: FindChoreograph.cmake
